lockwise-proof-of-concept/samples/negative/resources/fp33/10.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:56613ad400dbccddcf1a97ab0678527636e646f2ee4e307c339b31bc2dc5cec1
size 46448
